create funcional cliente

--- a/FacturacionCSR/src/main/resources/static/css/style.css
+++ b/FacturacionCSR/src/main/resources/static/css/style.css
@@ -1,3 +1,13 @@
+.usuario {
+    display: flex;
+    align-items: center;
+}
+
+#usuario {
+    height: 25px;
+    margin-right: 5px;
+}
+
 .logo img{
     border-radius: 50%;
     margin-top: 10px;
