--- a/FacturacionCSR/src/main/resources/static/css/style.css
+++ b/FacturacionCSR/src/main/resources/static/css/style.css
@@ -119,20 +119,6 @@
     border-radius: 10px;
 }
 
-#tdMasc {
-    width: 20px; height:20px;
-    background-image:url(../images/M.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#tdFem {
-    width: 20px; height:20px;
-    background-image:url(../images/F.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .icon {
     width: 20px; height:20px;
 }
@@ -337,4 +323,116 @@ table#tablaFacturas tr:nth-child(odd){
     background: #cfffd4;
 }
 
+.usuario {
+    display: flex;
+    align-items: center;
+}
 
+#usuario {
+    height: 25px;
+    margin-right: 5px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: block;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
+    border-color: #ff884d;
+    box-shadow: 0 0 8px rgba(255, 136, 77, 0.8);
+}
+
+input.invalid {
+    border-color: red;
+    background-color: #ffcccc;
+}
+
+.error {
+    color: red;
+    font-size: 0.8em;
+}
+
+#contenedor-guardar {
+    text-align: center;
+    margin-top: 20px;
+}
+
+button {
+    background-color: #ff884d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #e07746;
+}
+
+button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.mensaje {
+    text-align: center;
+    padding: 10px;
+    color: #fff;
+    background-color: #4CAF50; /* Green background for success messages */
+    border-radius: 4px;
+    margin-top: 20px;
+}
+
+.error {
+    background-color: #f44336; /* Red background for error messages */
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #ff884d;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #fff7f2;
+}
+
+tr:hover {
+    background-color: #ffece6;
+}
